--- a/style.css
+++ b/style.css
@@ -191,12 +191,18 @@ nav {
     height: 50dvh;
   }
 
+  .services h2{
+    font-size: 2rem;
+    letter-spacing: 2px;
+    margin: 2rem 1rem;
+    padding-left: 10px;
+  }
+
   .service-content{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    height: 100%;
   }
 
   .service-content > div{
