--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+img{
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+    object-position: center;
+}
 
 /* Navbar */
 nav {
@@ -184,6 +191,9 @@ nav {
     background-color: #333333ba;
     color: white;
   }
+  .splash-content{
+    padding-left: 10px;
+  }
 
   .services{
     max-width: 1180px;
@@ -205,10 +215,31 @@ nav {
     flex-wrap: wrap;
   }
 
+  .services-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
   .service-content > div{
     flex: 1 1 400px;
-    border: 1px solid black;
     margin: 0 1rem;
     padding: 0 1rem;
-    min-height: 300px;
+    min-height: 380px;
+  }
+
+  .service-galery{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+  }
+  .service-img{
+   width: 100%;
+   height: 100%;;
+  } 
+  .services p{
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+    margin: 1rem 0;
   }
