--- a/style.css
+++ b/style.css
@@ -198,7 +198,6 @@ nav {
   .services{
     max-width: 1180px;
     margin: 0 auto;
-    height: 50dvh;
   }
 
   .services h2{
@@ -218,7 +217,7 @@ nav {
   .services-text{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
   }
 
@@ -233,6 +232,7 @@ nav {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
+    padding-bottom: 2rem !important;
   }
   .service-img{
    width: 100%;
@@ -241,5 +241,14 @@ nav {
   .services p{
     font-size: 1.2rem;
     letter-spacing: 1px;
-    margin: 1rem 0;
+    margin-bottom: 1rem;
+  }
+  @media screen and (max-width: 768px){
+    .service-content > div{
+      flex: 1 1 100%;
+    }
+    .service-galery{
+      grid-template-columns: repeat(1, 1fr);
+    }
+    
   }
