--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+html {
+  scroll-behavior: smooth;
+}
 img{
     width: 100%;
     height: 100%;
@@ -175,15 +179,13 @@ nav {
     color: white;
     cursor: pointer;
   }
-  main{
-    height: 100dvh;
-  }
+ 
 
   .splash{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50dvh;
+    height: 60dvh;
     background-image: url('images/pexels-garvin-st-villier-3311574.jpg');
     background-position: center;
     background-size: cover;
@@ -222,22 +224,30 @@ nav {
   }
 
   .service-content > div{
-    flex: 1 1 400px;
+    flex: 1 1 300px;
     margin: 0 1rem;
     padding: 0 1rem;
-    min-height: 380px;
   }
 
   .service-galery{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
     gap: 10px;
     padding-bottom: 2rem !important;
   }
   .service-img{
    width: 100%;
-   height: 100%;;
+   height: 193px;
+   overflow: hidden;
   } 
+
+  .service-img img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    object-position: center;
+  }
   .services p{
     font-size: 1.2rem;
     letter-spacing: 1px;
@@ -251,4 +261,30 @@ nav {
       grid-template-columns: repeat(1, 1fr);
     }
     
+  }
+
+  .galery h2 {
+    font-size: 2rem;
+    letter-spacing: 2px;
+    margin: 2rem 1rem;
+    padding-left: 10px;
+    text-align: center;
+  }
+
+  .image-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .images {
+    flex: 1 1 300px;
+    margin: 1rem;
+    padding: 1rem;
+  }
+
+  footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 1rem 0;
   }
